<resources>
    <string name="app_name">Android class may</string>
    <string name="hello_world">Hello Devlopers</string>
    <string name="btn_hello_world">Hello World</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="i_agree">I agree</string>
    <string name="hi_there">Welcome Back</string>
    <string name="login">Login</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="signup">SignUp</string>
    <string name="have_account_login_here">Have account? Login here</string>
    <string name="email_fragment">Email Fragment</string>
    <string name="password_fragment">Todo List</string>
    <string name="details_fragment">Notification Example</string>
    <string name="user_email_example">user@email.example</string>
    <string name="user_name">User Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Password Fragment</string>
    <string name="details">Detailed Fragment</string>
    <string name="email_frag">Email Fragment</string>
    <string name="add">ADD</string>
    <string name="title">Title</string>
    <string name="show_notification">Show Notification</string>
    <string name="coroutine_example">Coroutine Example</string>
    <string name="item_name">Item Name</string>
    <string name="add_item">Add Item</string>
    <string name="item_amount">item amount</string>
    <string name="cancel">Cancel</string>
    <string name="add_dialog">ADD</string>
    <string name="character_name">Character Name</string>
    <string name="fullname">FullName</string>
    <string name="new_full_name">New Full name</string>
    <string name="email_address">Email Address</string>
    <string name="new_email_address">New Email Address</string>
    <string name="password">password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_notification_title">Enter Your notification title</string>
    <string name="enter_your_notification_message">Enter Your notification message</string>
    <string name="user_device_token">user device token</string>
    <string name="send_notification">Send Notification</string>

</resources>