<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/email_fl"
        android:title="@string/email_fragment"
        android:icon="@drawable/email"
        />
    <item
        android:id="@+id/password_fl"
        android:title="@string/password_fragment"
        android:icon="@drawable/todo"
        />
    <item
        android:id="@+id/notificationexample"
        android:title="@string/details_fragment"
        android:icon="@drawable/notification"
        />
    <item
        android:id="@+id/shoppingitemapp"
        android:title="Shopping Item"
        android:icon="@drawable/shopping"
        />
    <item
        android:id="@+id/todolistapi"
        android:title="TodoListItem APi"
        android:icon="@drawable/todo"
        />
    <item
        android:id="@+id/breakingbad"
        android:title="BreakingBad"
        android:icon="@drawable/todo"
        />



</menu>