<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".firestoreapp.ui.FirestoreApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/oldfullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/fullname" />

        <EditText
            android:id="@+id/newfullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/new_full_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/oldEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/email_address" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/new_email_address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:hint="@string/new_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/btnretrieve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Retrieve"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Update"
      />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Delete" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        >
        <TextView
            android:id="@+id/tvshowProfiledata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Example text"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            />
    </ScrollView>

</LinearLayout>