<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/hello_world"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/image_android"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/text_hello"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/android" />
    <SeekBar
        android:id="@+id/sb_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10"
        android:layout_below="@+id/image_android"
        />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_your_name_here" />
    <CheckBox
        android:id="@+id/cb_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree"
        android:layout_below="@id/et_name"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup
        android:id="@+id/rg_buttons"
        android:layout_below="@+id/cb_agree"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            />
        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            />

    </RadioGroup>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_hello_world" />


</RelativeLayout>